App Store bağlantısı eklendi ve Google Play butonu kaldırıldı

--- a/index.html
+++ b/index.html
@@ -214,8 +214,7 @@
             <h1>Budgeto</h1>
             <p>Bütçenizi akıllıca yönetin, tasarruflarınızı artırın!</p>
             <div class="app-links">
-                <a href="#" class="app-button">App Store</a>
-                <a href="#" class="app-button">Google Play</a>
+                <a href="https://apps.apple.com/tr/app/budgeto/id6744000771" class="app-button" target="_blank">App Store</a>
             </div>
         </div>
     </header>
