--- a/index.html
+++ b/index.html
@@ -284,7 +284,9 @@
             <p>Sorularınız mı var? Geri bildirim göndermek mi istiyorsunuz?</p>
             
             <div class="contact-form">
-                <a href="mailto:butgetofinans@gmail.com?subject=Budgeto%20Geri%20Bildirim&body=Merhaba%20Budgeto%20Ekibi%2C%0A%0ABenim%20geri%20bildirimim%3A%0A%0A" class="contact-email">E-posta Gönder</a>
+                <input type="text" id="emailSubject" placeholder="Başlık" class="form-input">
+                <textarea id="emailBody" placeholder="Açıklama" class="form-textarea"></textarea>
+                <button onclick="sendEmail()" class="contact-email">E-posta Gönder</button>
                 
                 <div class="mail-info">
                     <p>veya doğrudan yazın:</p>
@@ -299,5 +301,14 @@
             <p>&copy; 2025 Budgeto. Tüm hakları saklıdır.</p>
         </div>
     </footer>
+
+    <script>
+        function sendEmail() {
+            const subject = document.getElementById('emailSubject').value;
+            const body = document.getElementById('emailBody').value;
+            const mailtoLink = `mailto:butgetofinans@gmail.com?subject=${encodeURIComponent(subject)}&body=${encodeURIComponent(body)}`;
+            window.location.href = mailtoLink;
+        }
+    </script>
 </body>
 </html>
