--- a/index.html
+++ b/index.html
@@ -107,6 +107,113 @@
                 padding: 1rem;
             }
         }
+
+        .contact-form {
+            display: flex;
+            flex-direction: column;
+            gap: 1rem;
+            margin-top: 1.5rem;
+        }
+
+        .form-input, .form-textarea {
+            width: 100%;
+            padding: 0.75rem;
+            border: 1px solid #ccc;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            font-size: 1rem;
+        }
+
+        .form-textarea {
+            resize: vertical;
+            min-height: 100px;
+        }
+
+        .contact-email {
+            background-color: var(--primary-color);
+            color: white;
+            padding: 0.75rem;
+            border: none;
+            border-radius: 8px;
+            cursor: pointer;
+            font-size: 1rem;
+            transition: background-color 0.3s ease;
+        }
+
+        .contact-email:hover {
+            background-color: #1669bb;
+        }
+
+        body {
+            font-family: 'Segoe UI', sans-serif;
+            background-color: #f4f6f8;
+            color: #333;
+            margin: 0;
+            padding: 0;
+        }
+
+        .contact-section {
+            max-width: 600px;
+            margin: 60px auto;
+            padding: 20px;
+            text-align: center;
+        }
+
+        .contact-section h2 {
+            font-size: 2rem;
+            margin-bottom: 10px;
+        }
+
+        .contact-section p {
+            font-size: 1.1rem;
+            margin-bottom: 30px;
+            color: #555;
+        }
+
+        .contact-form {
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
+        }
+
+        .contact-form input,
+        .contact-form textarea {
+            padding: 12px 16px;
+            font-size: 1rem;
+            border: 1px solid #ccc;
+            border-radius: 10px;
+            resize: none;
+            transition: border 0.3s ease, box-shadow 0.3s ease;
+            background-color: white;
+        }
+
+        .contact-form input:focus,
+        .contact-form textarea:focus {
+            border-color: #1e88e5;
+            box-shadow: 0 0 0 3px rgba(30, 136, 229, 0.2);
+            outline: none;
+        }
+
+        .contact-form button {
+            padding: 12px;
+            font-size: 1rem;
+            background-color: #1e88e5;
+            color: white;
+            border: none;
+            border-radius: 10px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        .contact-form button:hover {
+            background-color: #1565c0;
+        }
+
+        .footer {
+            margin-top: 30px;
+            font-size: 0.9rem;
+            color: #777;
+        }
     </style>
 </head>
 <body>
@@ -148,23 +255,20 @@
         </div>
     </section>
 
-    <section id="contact" class="fade-in">
-        <div class="container">
-            <h2>İletişim</h2>
-            <p>Sorularınız mı var? Geri bildirim göndermek mi istiyorsunuz?</p>
-            <form class="contact-form">
-                <input type="text" id="emailSubject" placeholder="Mail Başlığı" class="form-input">
-                <textarea id="emailBody" placeholder="Mail Açıklaması" class="form-textarea"></textarea>
-                <button type="button" onclick="sendEmail()" class="contact-email">Mail Gönder</button>
-            </form>
-        </div>
-    </section>
+    <section class="contact-section">
+        <h2>İletişim</h2>
+        <p>Sorularınız mı var? Geri bildirim göndermek mi istiyorsunuz?</p>
 
-    <footer>
-        <div class="container">
-            <p>&copy; 2025 Budgeto. Tüm hakları saklıdır.</p>
-        </div>
-    </footer>
+        <form class="contact-form" onsubmit="event.preventDefault(); alert('Mesajınız alındı. Teşekkürler!');">
+            <input type="text" placeholder="Mail Başlığı" required />
+            <textarea placeholder="Mail Açıklaması" required></textarea>
+            <button type="submit">Mail Gönder</button>
+        </form>
+
+        <footer class="footer">
+            © 2025 Budgeto. Tüm hakları saklıdır.
+        </footer>
+    </section>
 
     <script>
         function sendEmail() {
